import and explort

--- a/Learning_React/Section2/file1.html
+++ b/Learning_React/Section2/file1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h2>this is Js tutorial </h2>   
-    <script src ="file1.js"></script>
+    <script type = "module" src ="file1.js"></script>
 </body>
 </html>
 
